--- a/02-outlier-procedure.qmd
+++ b/02-outlier-procedure.qmd
@@ -73,7 +73,7 @@ df_implicit_rt <-
 df_explicit_rt <- 
   df_explicit_rt |>  
   # filtering out extreme RTs
-  filter(rt > 300 & rt < 3000)
+  filter(rt > .3 & rt < 3)
 
 # total percentage of trials removed in the explicit task
 (count(df_explicit) - count(df_explicit_rt)) / count(df_explicit)
@@ -81,7 +81,7 @@ df_explicit_rt <-
 
 df_implicit_rt <- 
   df_implicit_rt |>  
-  filter(rt > 300 & rt < 3000)
+  filter(rt > .3 & rt < 3)
 
 # total percentage of trials removed in the implicit task
 (count(df_implicit) - count(df_implicit_rt)) / count(df_implicit)
@@ -123,7 +123,7 @@ df_explicit_rt |>
   group_by(subjectid) |> 
   summarise(mean_rt_explicit = mean(rt)) |> 
   ungroup() |> 
-  filter(mean_rt_explicit > 1384) |> 
+  filter(mean_rt_explicit > 1.38) |> 
   arrange(desc(mean_rt_explicit))
 # 7 outliers in the explicit task
 
@@ -131,7 +131,7 @@ df_implicit_rt |>
   group_by(subjectid) |> 
   summarise(mean_rt_implicit = mean(rt)) |> 
   ungroup() |> 
-  filter(mean_rt_implicit > 1063) |> 
+  filter(mean_rt_implicit > 1.06) |> 
   arrange(desc(mean_rt_implicit))
 # 4 outliers in the implicit task
 
